fixed minor alignments

--- a/src/commonUtils/assets/styles/Colors.scss
+++ b/src/commonUtils/assets/styles/Colors.scss
@@ -5,7 +5,7 @@ $black-light: #333333;
 $primary-color: #ed1c24;
 $secondary-color: #353c40;
 
-$grey-ultralight: #f5f5f5;
+$grey-ultralight: #f8f8f8;
 $grey-lighter: #f8f8f8;
 $grey-light: #b6b7b8;
 $grey: #b9b9b9;
